Compare Pystan Gaussian Process exp kernel to George GP exp kernel

--- a/PyStan_Gaussian_Process_Toy_Model.ipynb
+++ b/PyStan_Gaussian_Process_Toy_Model.ipynb
@@ -996,6 +996,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Next Steps: Generalize to 2D. "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
